--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -11,6 +11,11 @@ body {
 
 h1 {
   font-weight: bold;
+  margin-bottom: 10px;
+}
+
+h3 {
+  max-width: 700px;
 }
 
 #demos {
@@ -29,7 +34,11 @@ h1 {
     }
   }
 
-  @media screen and (max-width:400px){
+  @media screen and (max-width:1024px){
     grid-template-columns: repeat(2,1fr);
+  }
+
+  @media screen and (max-width:400px) {
+    grid-template-columns: repeat(1,1fr);
   }
 }
