Add support for links to source code

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -63,3 +63,15 @@ ul {
     list-style: none;
   }
 }
+
+.demo-item {
+  margin-top:10px;
+}
+
+p.demo-title {
+  font-size:20px;
+}
+
+a.sourceLink {
+  font-size:16px;
+}
